# plane_crash_model_deployment

./: README.md  feature_engineering.ipynb  plane_crash_EDA copy.ipynb  plane_crash_EDA.ipynb  pyproject.toml
data/: raw_data.csv
