[tool.poetry]
name = "plane-crash-model-deployment"
version = "0.1.0"
description = ""
authors = ["vkisialeuskaya-Ki <Viktoryia.Kisialeuskaya@ki-insurance.com>"]
readme = "README.md"
packages = [{include = "plane_crash_model_deployment"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.0.1"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scipy = "^1.10.1"
urllib3 = "1.26.15"
beautifulsoup4 = "4.12.0"
spacy = "^3.5.2"
pydantic = "^1.10.7"
nltk = "^3.8.1"
gensim = "^4.3.1"
sklearn = "^0.0.post5"
scikit-learn = "^1.2.2"
plotly = "^5.15.0"
pandera = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
